--- a/index.html
+++ b/index.html
@@ -1,37 +1,235 @@
-<!-- TO ACHIEVE THIS TYPE IN "!" AND PRESS "TAB" -->
 <!DOCTYPE html>
-<!-- html below is a tag pair. "lang" is a language setting and is set to English. Html has 2 children: head and body -->
 <html lang="en">
-<!-- head below is a tag pair. It contains metadata about the document and links to external resources. -->
 <head>
-    <!-- meta below is a tag pair. It provides metadata about the HTML document. chrset = "UTF-8" is pulling all latin charachters-->
-    <meta charset="UTF-8">
-    <!-- Tag pair. Provides metadata about the HTML document. name = "viewport" is setting the viewport to the device's width and initial scale to 1.0 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Dev Starter</title>
-
-    <!-- Favicons -->
-    <link rel="icon" type="image/png" href="/favicons/favicon-48x48.png" sizes="48x48" />
-    <link rel="icon" type="image/svg+xml" href="/favicons/favicon.svg" />
-    <link rel="shortcut icon" href="/favicons/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Web Dev Starter" />
-    <link rel="manifest" href="/favicons/site.webmanifest" />    
-
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
-
-    <!-- JavaScript -->
-     <!-- script:src and then press tab for shortcut-->
-    <script src="script.js" defer> </script>
-
+  <meta charset="UTF-8">
+  <title>Image Color Group Editor</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #222;
+      color: #eee;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 20px;
+      padding: 20px;
+    }
+    #left-panel {
+      flex: 1;
+      text-align: center;
+    }
+    #right-panel {
+      flex: 1;
+      max-width: 400px;
+    }
+    input[type="file"] {
+      margin-bottom: 10px;
+    }
+    canvas {
+      max-width: 100%;
+      background: #111;
+      border: 2px solid #444;
+      border-radius: 10px;
+    }
+    .color-list {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 12px;
+      margin-top: 20px;
+    }
+    .color-item {
+      background: #333;
+      padding: 10px;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .color-preview {
+      width: 40px;
+      height: 40px;
+      border-radius: 6px;
+      border: 1px solid #555;
+    }
+    .color-inputs {
+      flex-grow: 1;
+    }
+    .color-inputs input {
+      width: 100%;
+      margin: 3px 0;
+      padding: 4px;
+      border: none;
+      border-radius: 4px;
+    }
+  </style>
 </head>
-
-<!-- body below is a tag pair. It contains the content of the document. -->
 <body>
+  <div id="left-panel">
+    <h2>Upload Image</h2>
+    <input type="file" id="fileInput" accept="image/*"><br>
+    <canvas id="canvas"></canvas>
+  </div>
 
-    <h1>Web Dev Starter</h1>
+  <div id="right-panel">
+    <h2>Editable Palette</h2>
+    <div class="color-list" id="colorList"></div>
+  </div>
 
+  <script>
+    const fileInput = document.getElementById("fileInput");
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+    const colorList = document.getElementById("colorList");
+
+    let palette = [];
+    let clusters = [];
+
+    fileInput.addEventListener("change", handleFile);
+
+    function handleFile(e) {
+      const file = e.target.files[0];
+      if (!file) return;
+
+      const img = new Image();
+      img.onload = () => {
+        canvas.width = img.width;
+        canvas.height = img.height;
+        ctx.drawImage(img, 0, 0);
+
+        const imageData = ctx.getImageData(0, 0, img.width, img.height);
+        palette = quantize(imageData.data, 12); // 12 groups of colors
+        clusters = assignClusters(imageData.data, palette);
+
+        renderColors();
+        recolorImage();
+      };
+      img.src = URL.createObjectURL(file);
+    }
+
+    // K-means-like quantization
+    function quantize(data, k) {
+      let colors = [];
+      for (let i = 0; i < data.length; i += 40) { // sample pixels (skip for speed)
+        colors.push([data[i], data[i + 1], data[i + 2]]);
+      }
+      // init palette
+      let centroids = colors.slice(0, k);
+      for (let iter = 0; iter < 8; iter++) {
+        let groups = Array.from({ length: k }, () => []);
+        colors.forEach(c => {
+          let idx = nearestColor(c, centroids);
+          groups[idx].push(c);
+        });
+        centroids = groups.map(g => {
+          if (g.length === 0) return [0, 0, 0];
+          return g[0].map((_, i) => Math.round(g.reduce((a, b) => a + b[i], 0) / g.length));
+        });
+      }
+      return centroids;
+    }
+
+    function nearestColor(color, centroids) {
+      let minDist = Infinity, idx = 0;
+      centroids.forEach((c, i) => {
+        let d = (c[0]-color[0])**2 + (c[1]-color[1])**2 + (c[2]-color[2])**2;
+        if (d < minDist) { minDist = d; idx = i; }
+      });
+      return idx;
+    }
+
+    function assignClusters(data, palette) {
+      let clusters = new Uint8Array(data.length/4);
+      for (let i = 0; i < data.length; i += 4) {
+        let idx = nearestColor([data[i], data[i+1], data[i+2]], palette);
+        clusters[i/4] = idx;
+      }
+      return clusters;
+    }
+
+    function recolorImage() {
+      const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+      for (let i = 0; i < imgData.data.length; i += 4) {
+        const idx = clusters[i/4];
+        const [r, g, b] = palette[idx];
+        imgData.data[i] = r;
+        imgData.data[i+1] = g;
+        imgData.data[i+2] = b;
+      }
+      ctx.putImageData(imgData, 0, 0);
+    }
+
+    function renderColors() {
+      colorList.innerHTML = "";
+      palette.forEach((color, idx) => {
+        const hex = rgbToHex(...color);
+        const item = document.createElement("div");
+        item.className = "color-item";
+
+        const preview = document.createElement("div");
+        preview.className = "color-preview";
+        preview.style.background = hex;
+
+        const inputs = document.createElement("div");
+        inputs.className = "color-inputs";
+
+        const picker = document.createElement("input");
+        picker.type = "color";
+        picker.value = hex;
+        picker.addEventListener("input", e => {
+          const { r, g, b } = hexToRgb(e.target.value);
+          palette[idx] = [r, g, b];
+          preview.style.background = e.target.value;
+          hexBox.value = e.target.value;
+          rgbBox.value = `rgb(${r},${g},${b})`;
+          recolorImage();
+        });
+
+        const hexBox = document.createElement("input");
+        hexBox.value = hex;
+        hexBox.addEventListener("input", e => {
+          if (/^#([0-9A-Fa-f]{6})$/.test(e.target.value)) {
+            const { r, g, b } = hexToRgb(e.target.value);
+            palette[idx] = [r, g, b];
+            preview.style.background = e.target.value;
+            picker.value = e.target.value;
+            rgbBox.value = `rgb(${r},${g},${b})`;
+            recolorImage();
+          }
+        });
+
+        const rgbBox = document.createElement("input");
+        rgbBox.value = `rgb(${color[0]},${color[1]},${color[2]})`;
+        rgbBox.addEventListener("input", e => {
+          const match = e.target.value.match(/rgb\((\d+),\s*(\d+),\s*(\d+)\)/);
+          if (match) {
+            const [_, r, g, b] = match.map(Number);
+            palette[idx] = [r, g, b];
+            const hexVal = rgbToHex(r,g,b);
+            preview.style.background = hexVal;
+            picker.value = hexVal;
+            hexBox.value = hexVal;
+            recolorImage();
+          }
+        });
+
+        inputs.appendChild(picker);
+        inputs.appendChild(hexBox);
+        inputs.appendChild(rgbBox);
+
+        item.appendChild(preview);
+        item.appendChild(inputs);
+        colorList.appendChild(item);
+      });
+    }
+
+    // helpers
+    function rgbToHex(r, g, b) {
+      return "#" + [r,g,b].map(x => x.toString(16).padStart(2,"0")).join("");
+    }
+    function hexToRgb(hex) {
+      const bigint = parseInt(hex.slice(1), 16);
+      return { r: (bigint >> 16)&255, g: (bigint >> 8)&255, b: bigint&255 };
+    }
+  </script>
 </body>
 </html>
-
